26 March 2013: Wouter
	- update lookup3.c with better endianness detection.

25 March 2013: Wouter
	- faster nsec3 updates.
	- Fixup contrib/bug390.patch for 4.0.0b4.
	- remove leak of nsec3.
	- allocate radixtree in region for small (5%) total savings and
	  about 15% savings in the radixtree itself (due to many small alloc
	  savings in region).

22 March 2013: Wouter
	- use less memory for non-nsec3, nsec3tree.

18 March 2013: Wouter
	- update nsd-mem with pretty printout and RRL count.

14 March 2013: Wouter
	- Fix memory statistics in nsd_munin_.

8 March 2013: Wouter
	- nsd-mem tool initial commit.

7 March 2013: Wouter
	- notify information is logged at correct verbosity level, 1.

5 March 2013: Matthijs
	- Add hash to rrl bucket

5 March 2013: Wouter
	- Fixup the growth and shrinkage of nsd.db.  This should use less
	  calls to remap and change the file and mmap size.

15 February 2013: Wouter
	- Fix compile on bigendian netbsd alpha.
	- Fixup tests for older dig (check if +noedns option is supported)

11 February 2013: Matthijs
	- Fix outgoing-interface: Don't fail if family is IPv6 but
	  only IPv4 outgoing-interface is set, or vice versa.

11 February 2013: Wouter
	- fix tcp zonetransfer pipeline lookup function.
	- remove compiler warning for memset from tsig read.

7 February 2013: Wouter
	- detect endianness in lookup3 on BSD, patch from Brad Smith.
	- nsd-control verbosity prints out verbosity level without argument.
	- nsd-control status prints out ratelimit if ratelimit is enabled.

5 February 2013: Wouter
	- Fix that old zonefile does not override newer AXFR for slave zones.
	- Nicer printout of notify.
	- beta4

4 February 2013: Wouter
	- Fix AXFR of NSEC3 slave zone.

1 February 2013: Wouter
	- Less printout of 'bad transfer'.

31 January 2013: Wouter
	- Fix that nsec3 zones are precompiled when read from udb.  This
	  caused assertion failures.
	- Fix is_apex flag for zones read from udb.

29 January 2013: Matthijs