@@ -907,6 +907,44 @@ main(int argc, char *argv[])
 		}
 	}
 
+	/* Setup the signal handling... */
+	action.sa_handler = sig_handler;
+	sigfillset(&action.sa_mask);
+	action.sa_flags = 0;
+	sigaction(SIGTERM, &action, NULL);
+	sigaction(SIGHUP, &action, NULL);
+	sigaction(SIGINT, &action, NULL);
+	sigaction(SIGILL, &action, NULL);
+	sigaction(SIGUSR1, &action, NULL);
+	sigaction(SIGALRM, &action, NULL);
+	sigaction(SIGCHLD, &action, NULL);
+	action.sa_handler = SIG_IGN;
+	sigaction(SIGPIPE, &action, NULL);
+
+	/* Initialize... */
+	nsd.mode = NSD_RUN;
+	nsd.signal_hint_child = 0;
+	nsd.signal_hint_reload = 0;
+	nsd.signal_hint_quit = 0;
+	nsd.signal_hint_shutdown = 0;
+	nsd.signal_hint_stats = 0;
+	nsd.signal_hint_statsusr = 0;
+	nsd.quit_sync_done = 0;
+
+	/* Initialize the server... */
+	if (server_init(&nsd) != 0) {
+		log_msg(LOG_ERR, "server initialization failed, %s could "
+			"not be started", argv0);
+		exit(1);
+	}
+#if defined(HAVE_SSL)
+	if(nsd.options->control_enable) {
+		/* read ssl keys while superuser and outside chroot */
+		if(!(nsd.rc = daemon_remote_create(nsd.options)))
+			error("could not perform remote control setup");
+	}
+#endif /* HAVE_SSL */
+
 	/* Unless we're debugging, fork... */
 	if (!nsd.debug) {
 		int fd;
@@ -920,6 +958,8 @@ main(int argc, char *argv[])
 			error("fork() failed: %s", strerror(errno));
 		default:
 			/* Parent is done */
+			server_close_all_sockets(nsd.udp, nsd.ifs);
+			server_close_all_sockets(nsd.tcp, nsd.ifs);
 			exit(0);
 		}
 
@@ -937,46 +977,8 @@ main(int argc, char *argv[])
 		}
 	}
 
-	/* Setup the signal handling... */
-	action.sa_handler = sig_handler;
-	sigfillset(&action.sa_mask);
-	action.sa_flags = 0;
-	sigaction(SIGTERM, &action, NULL);
-	sigaction(SIGHUP, &action, NULL);
-	sigaction(SIGINT, &action, NULL);
-	sigaction(SIGILL, &action, NULL);
-	sigaction(SIGUSR1, &action, NULL);
-	sigaction(SIGALRM, &action, NULL);
-	sigaction(SIGCHLD, &action, NULL);
-	action.sa_handler = SIG_IGN;
-	sigaction(SIGPIPE, &action, NULL);
-
 	/* Get our process id */
 	nsd.pid = getpid();
-
-	/* Initialize... */
-	nsd.mode = NSD_RUN;
-	nsd.signal_hint_child = 0;
-	nsd.signal_hint_reload = 0;
-	nsd.signal_hint_reload_hup = 0;
-	nsd.signal_hint_quit = 0;
-	nsd.signal_hint_shutdown = 0;
-	nsd.signal_hint_stats = 0;
-	nsd.signal_hint_statsusr = 0;
-	nsd.quit_sync_done = 0;
-
-	/* Initialize the server... */
-	if (server_init(&nsd) != 0) {
-		error("server initialization failed, %s could "
-			"not be started", argv0);
-	}
-#if defined(HAVE_SSL)
-	if(nsd.options->control_enable) {
-		/* read ssl keys while superuser and outside chroot */
-		if(!(nsd.rc = daemon_remote_create(nsd.options)))
-			error("could not perform remote control setup");
-	}
-#endif /* HAVE_SSL */
 
 	/* Set user context */
 #ifdef HAVE_GETPWNAM
